# AdventOfCode2022

./: .gitignore  Cargo.toml  Program.cs  README.md  justfile
2022/: Cargo.toml  README.md  justfile
2022/src/: lib.java  lib.rs
2022/src/days/: day01.java  day02.java  day03.java  day04.java  day05.java  day06.kt  day07.java  day08.js  day09.rs  day10.rs  day12.ex  day13.rs  day15.rs  day22.java  day25.kt
2023/: Cargo.toml  README.md  justfile
2023/src/: lib.rs
2023/src/day/: 01.py  01.rs  02.rs  03.rs  04.rs  05.rs  06.cpp  06.rs
22/: Cargo.toml  README.md  build.sh  flake.nix
22/src/: day05.java  day06.java  day07.java  day08.java  day08.js  day09.java  day09.rs  day11.java  day12.java  day14.kt  day22.java  day25.kt
22/src/days/: day03.java  day13.rs
23/: Cargo.toml  README.md  justfile
23/src/day/: 01.rs  02.rs  05.rs
src/: Day1.java  Day2.java  main.rs
src/Days/: Day1.java  Day2.java  Day22.java  Day3.java  Day4.java  Day5.java  DayTemplate.java
src/Helpers/: Day22Maze.java  FileUtils.java
src/days/: Day01.java  Day06.kt  Day07.java  Day08.js  Day09.kt  Day09.rs  Day10.rs  Day2.java  Day22.java  Day25.kt  Day3.java  Day4.java  Day6.kt  Day8.js  DayTemplate.java  day13.cs
src/helpers/: Day22Maze.java  Day25SNAFUNumber.kt  Day7TreeObject.java  FileUtils.java
