[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre.workspace = true
regex.workspace = true
glam = "0.24"
error-stack.workspace = true

[[bin]]
name = "2022-09"
path = "./src/days/day09.rs"

[[bin]]
name = "2022-10"
path = "./src/days/day10.rs"

[[bin]]
name = "2022-13"
path = "./src/days/day13.rs"

[[bin]]
name = "2022-15"
path = "./src/days/day15.rs"
