[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]

[dependencies]
eyre = "0.6"
regex = "1"
error-stack = "0.4"
glam = "0.28"

[[bin]]
name = "2022-09"
path = "./src/days/day09.rs"

[[bin]]
name = "2022-10"
path = "./src/days/day10.rs"

[[bin]]
name = "2022-13"
path = "./src/days/day13.rs"

[[bin]]
name = "2022-15"
path = "./src/days/day15.rs"
