[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre.workspace = true
regex.workspace = true
error-stack.workspace = true

[[bin]]
name = "2023-01"
path = "./src/day/01.rs"

[[bin]]
name = "2023-02"
path = "./src/day/02.rs"

[[bin]]
name = "2023-03"
path = "./src/day/03.rs"

[[bin]]
name = "2023-04"
path = "./src/day/04.rs"

[[bin]]
name = "2023-05"
path = "./src/day/05.rs"

[[bin]]
name = "2023-06"
path = "./src/day/06.rs"
